Adjust structure and padding & margin settings for Horizontal Cards to solve the overflow issue when the title takes 2+ lines.

--- a/src/pages/Home/components/HorizontalCard/HorizontalCard.module.css
+++ b/src/pages/Home/components/HorizontalCard/HorizontalCard.module.css
@@ -17,7 +17,15 @@
 }
 
 .cardBody {
+   box-sizing: border-box;
+   padding: 0;
    align-self: center;
+}
+
+.subtitle {
+   font-size: 1.1em;
+   font-weight: 500;
+   margin: 0;
 }
 
 .cardImg {
